# ticket-flow

./: .env.example  .gitignore  Plan.md  README.md  docker-compose.yml  pyproject.toml
dashboard/: index.html  nginx.conf  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: Layout.tsx  StatusBadge.tsx  WorkflowProgress.tsx
dashboard/src/hooks/: useApprovals.ts  useTickets.ts
dashboard/src/pages/: Approvals.tsx  CreateTicket.tsx  Dashboard.tsx  TicketDetail.tsx  Tickets.tsx
docker/: Dockerfile.api  Dockerfile.worker
docs/: configuration.md
grafana/dashboards/: ticket-flow.json
migrations/: 001_initial.sql  002_approval_system.sql  003_demo_data.sql  Framework-version.md
scripts/: __init__.py  seed_data.py  setup_demo.py
src/api/: email_routes.py  main.py  models.py  routes.py
src/common/: config.py  logging.py  metrics.py  queue.py  tracing.py
src/db/: client.py  models.py  repositories.py
src/services/: email_parser.py  email_sender.py  github.py
src/worker/: main.py  processor.py
src/workflow/: agent.py  graph.py  nodes.py  state.py  tools.py  visualize.py
tests/: test_api.py  test_e2e.py  test_load.py  test_workflow.py
